--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="#AAAA"
+        android:background="#AABB"
         app:headerLayout="@layout/header"
         app:menu="@menu/menu" />
 
