--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-condensed-medium"
         android:text="Finance personnelle"
-        android:textColor="#FF9800"
+        android:textColor="#E4FF8400"
         android:textSize="24sp" />
 
     <TextView
