--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -20,7 +20,7 @@
             android:title="Epargne" />
         <item
             android:id="@+id/nav_dettes"
-            android:icon="@drawable/ic_loans"
+            android:icon="@drawable/ic_dettes"
             android:title="Dettes" />
         <item
             android:id="@+id/nav_creance"
