--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#E4FF8400</color>
-    <color name="colorPrimaryDark">#E4FF8400</color>
+    <color name="colorPrimaryDark">#232F34</color>
     <color name="colorAccent">#E4FF8400</color>
 </resources>
