--- a/app/src/main/res/layout/fragment_revenus.xml
+++ b/app/src/main/res/layout/fragment_revenus.xml
@@ -1,16 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FragmentRevenus">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Revenus"
-        android:background="@color/design_default_color_background"
-        android:layout_centerInParent="true" />
+        android:orientation="vertical">
+
+        <com.getbase.floatingactionbutton.FloatingActionsMenu
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_margin="15dp"
+            app:fab_addButtonColorNormal="@color/colorPrimaryDark"
+            app:fab_addButtonColorPressed="@color/colorPrimary"
+            app:fab_labelStyle="@style/fabStyle">
+
+            <com.getbase.floatingactionbutton.FloatingActionButton
+                android:id="@+id/source"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:fab_colorNormal="#ffffff"
+                app:fab_colorPressed="#CBCBCB"
+
+                app:fab_icon="@drawable/ic_add_black"
+                app:fab_size="mini"
+                app:fab_title="Source" />
+
+            <com.getbase.floatingactionbutton.FloatingActionButton
+                android:id="@+id/revenus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:fab_colorNormal="#ffffff"
+                app:fab_colorPressed="#CBCBCB"
+
+                app:fab_icon="@drawable/ic_add_black"
+                app:fab_size="mini"
+                app:fab_title="Revenus" />
+
+        </com.getbase.floatingactionbutton.FloatingActionsMenu>
+
+    </RelativeLayout>
 
 </FrameLayout>
