--- a/app/src/main/res/layout/fragment_depense.xml
+++ b/app/src/main/res/layout/fragment_depense.xml
@@ -12,6 +12,13 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/listviewDepenses"
+            android:layout_margin="2dp"
+            android:layout_centerInParent="false" />
+
         <com.getbase.floatingactionbutton.FloatingActionsMenu
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
