--- a/app/src/main/res/layout/fragment_ajout_creances.xml
+++ b/app/src/main/res/layout/fragment_ajout_creances.xml
@@ -5,10 +5,30 @@
     android:layout_height="match_parent"
     tools:context=".FragmentAjoutCreances">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical"
+        android:layout_margin="5dp">
+
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <EditText
+                android:id="@+id/editTextDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_centerHorizontal="true"
+                android:ems="15"
+                android:gravity="center"
+                android:hint="22/09/2020" />
+
+
+        </RelativeLayout>
+
+
+    </LinearLayout>
 
 </FrameLayout>
