insert for Objet de depenses... DatabaseManager -> implements singleton pattern

--- a/app/src/main/res/layout/fragment_ajout_objet_depenses.xml
+++ b/app/src/main/res/layout/fragment_ajout_objet_depenses.xml
@@ -6,9 +6,62 @@
     tools:context=".FragmentAjoutObjetDepenses">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_margin="10dp"
+            android:id="@+id/title"
+            android:layout_gravity="center"
+            android:text="Ajouter un objet de depense"
+            android:textStyle="bold"
+            android:textSize="20sp" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/editTextObjet"
+            android:gravity="center"
+            android:layout_margin="20dp"
+            android:hint="Source de Revenus"
+            android:layout_above="@+id/title" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_margin="10dp"
+            android:layout_gravity="center"
+            android:gravity="center">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:id="@+id/annuler_btn_objet"
+                android:text="Annuler"
+                android:gravity="center"
+                android:textColor="#ffffff"
+                android:background="@color/colorPrimaryDark" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:id="@+id/sauver_btn_objet"
+                android:text="Sauver"
+                android:gravity="center"
+                android:textColor="#ffffff"
+                android:background="@color/colorPrimaryDark" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </FrameLayout>
