--- a/app/src/main/res/layout/fragment_ajout_depenses.xml
+++ b/app/src/main/res/layout/fragment_ajout_depenses.xml
@@ -5,10 +5,25 @@
     android:layout_height="match_parent"
     tools:context=".FragmentAjoutDepenses">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_margin="5dp"
+        android:layout_gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_margin="10dp"
+            android:id="@+id/title"
+            android:layout_gravity="center"
+            android:text="Ajouter une depense"
+            android:textStyle="bold"
+            android:textSize="20sp" />
+
+
+    </LinearLayout>
 
 </FrameLayout>
