--- a/app/src/main/res/layout/fragment_ajout_depenses.xml
+++ b/app/src/main/res/layout/fragment_ajout_depenses.xml
@@ -12,16 +12,89 @@
         android:layout_gravity="center"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_margin="10dp"
-            android:id="@+id/title"
-            android:layout_gravity="center"
-            android:text="Ajouter une depense"
-            android:textStyle="bold"
-            android:textSize="20sp" />
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_centerHorizontal="true"
+                android:layout_margin="10dp"
+                android:id="@+id/title"
+                android:text="Ajouter une depense"
+                android:textStyle="bold"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/editTextDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:focusedByDefault="true"
+                android:focusableInTouchMode="true"
+                android:layout_below="@+id/title"
+                android:layout_centerHorizontal="true"
+                android:ems="15"
+                android:gravity="center"
+                android:hint="Date" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_margin="10dp"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/editTextMontant"
+                android:inputType="numberDecimal"
+                android:hint="Montant"
+                android:layout_below="@+id/editTextDate" />
+
+
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:layout_margin="10dp"
+                android:gravity="center_horizontal"
+                android:layout_below="@+id/editTextMontant"
+                android:id="@+id/spinner_sourceRevenus"
+                android:layout_gravity="center_horizontal" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_margin="10dp"
+                android:id="@+id/linear"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_below="@id/spinner_sourceRevenus">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:id="@+id/annuler_revenus_btn"
+                    android:text="Annuler"
+                    android:gravity="center"
+                    android:textColor="#ffffff"
+                    android:background="@color/colorPrimaryDark" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:id="@+id/sauver_revenus_btn"
+                    android:text="Sauver"
+                    android:gravity="center"
+                    android:textColor="#ffffff"
+                    android:background="@color/colorPrimaryDark" />
+
+            </LinearLayout>
+        </RelativeLayout>
 
 
     </LinearLayout>
