epargne transfert vers balance, affichage solde.

--- a/app/src/main/res/layout/fragment_epargne.xml
+++ b/app/src/main/res/layout/fragment_epargne.xml
@@ -6,11 +6,115 @@
     tools:context=".FragmentEpargne">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Epargne"
-        android:background="@color/design_default_color_background"
-        android:layout_centerInParent="true" />
+        android:orientation="vertical"
+        android:layout_margin="5dp">
+
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_centerHorizontal="true"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginBottom="5dp"
+                android:id="@+id/titleText"
+                android:text="Transfert vers Balance"
+                android:textStyle="bold"
+                android:textSize="20sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:layout_below="@+id/titleText"
+                android:id="@+id/linearDesc"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:id="@+id/textview"
+                    android:text="Epargne: "
+                    android:layout_marginRight="3dp"
+                    android:textStyle="italic"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textview_montant"
+                    android:text="5000"
+                    android:textStyle="italic"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/editTextDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:focusedByDefault="true"
+                android:layout_below="@+id/linearDesc"
+                android:layout_centerHorizontal="true"
+                android:ems="15"
+                android:gravity="center"
+                android:hint="Date" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_margin="10dp"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/editTextMontant"
+                android:inputType="numberDecimal"
+                android:hint="Montant"
+                android:layout_below="@+id/editTextDate" />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_margin="10dp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_below="@id/editTextMontant">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:id="@+id/annuler_btn"
+                    android:text="Annuler"
+                    android:gravity="center"
+                    android:textColor="#ffffff"
+                    android:background="@color/colorPrimaryDark" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:id="@+id/sauver_btn"
+                    android:text="Sauver"
+                    android:gravity="center"
+                    android:textColor="#ffffff"
+                    android:background="@color/colorPrimaryDark" />
+
+            </LinearLayout>
+        </RelativeLayout>
+
+
+    </LinearLayout>
 
 </FrameLayout>
