TOUS LES REVENUS ET DEPENSES SONT AFFICHES DS L ORDRE ANTI CHRONOLOGIQUE

--- a/app/src/main/res/layout/fragment_ajout_creances.xml
+++ b/app/src/main/res/layout/fragment_ajout_creances.xml
@@ -37,7 +37,7 @@
                 android:ems="15"
                 android:focusedByDefault="true"
                 android:gravity="center"
-                android:hint="2020-08-19" />
+                android:hint="Date" />
 
             <EditText
                 android:layout_width="match_parent"
