--- a/app/src/main/res/layout/fragment_ajout_revenus.xml
+++ b/app/src/main/res/layout/fragment_ajout_revenus.xml
@@ -39,7 +39,7 @@
                 android:layout_centerHorizontal="true"
                 android:ems="15"
                 android:gravity="center"
-                android:hint="22/09/2020" />
+                android:hint="Date" />
 
             <EditText
                 android:layout_width="match_parent"
