--- a/app/src/main/res/layout/fragment_creances.xml
+++ b/app/src/main/res/layout/fragment_creances.xml
@@ -28,7 +28,7 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
             android:layout_margin="15dp"
-            app:fab_icon="@drawable/ic_add"
+            app:fab_icon="@drawable/ic_add_white"
             app:fab_addButtonColorNormal="@color/colorPrimaryDark"
             app:fab_addButtonColorPressed="@color/colorPrimary"
 
